k8s/templates/platform/azure_tad/patch.yaml
---
# first empty volumes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-database
spec:
  template:
    metadata:
      labels:
        name: hhb-database
    spec:
      volumes: null
---
# change to new array
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-database
spec:
  template:
    metadata:
      labels:
        name: hhb-database
    spec:
      containers:
        - name: hhb-database
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: hhb-database-volume-${NAMESPACE}
      volumes:
        - name: hhb-database-volume-${NAMESPACE}
          persistentVolumeClaim:
            claimName: data-huishoudboekje-postgresql-0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-backend
spec:
  template:
    spec:
      containers:
        - name: hhb-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-unleashservice
spec:
  template:
    spec:
      containers:
        - name: hhb-unleashservice
